--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!doctype html>
-<html lang="ar" dir="rtl"> <head>
+<html lang="ar" dir="rtl">
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>أكاديمية الشجاع للتايكوندو</title> <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>أكاديمية الشجاع للتايكوندو</title>
+
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#000000">
+    <link rel="apple-touch-icon" href="/icon-192.png">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
-
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js')
+            .then(reg => console.log('Service Worker Registered! Scope:', reg.scope))
+            .catch(err => console.log('Service Worker Failed:', err));
+        });
+      }
+    </script>
   </body>
 </html>
